UI-3399 | Wrong GUI in space - Fix space title on IE9,IE10

--- a/webapp/resources/src/main/webapp/skin/less/social.less
+++ b/webapp/resources/src/main/webapp/skin/less/social.less
@@ -38,6 +38,10 @@
 					margin-top: 0;
 					margin-bottom: 3px;
 					font-size: (@baseFontSize + 3);
+					.limitText {
+						display: block;
+						max-width: 99%;
+					}
 				}
 				.ellipsis {
 				/* Truncate text in the case the value's length over that it's expecting length,
